--- a/style.css
+++ b/style.css
@@ -1,12 +1,13 @@
 * {
     margin: 0;
     padding: 0;
+    font-family: 'Muli', sans-serif, !important;
 }
 
 :root {
-    --color-primary: green;
-    --color-bg-primary: red;
-    --color-secondary: blue;
+    --color-primary: #ceff00;
+    --color-bg-primary: #343d52;
+    --color-secondary: #343d52;
 }
 
 body {
@@ -17,27 +18,39 @@ nav {
     display: flex;
     padding: 10px;
     justify-content: space-between;
-    background-color: var(--color-primary);
+    background-color: var(--color-bg-primaryprimary);
 }
 
 nav span {
     background: var(--color-secondary);
     padding: 15px;
+    font-size: 40px;
+    font-weight: bolder;
 }
 
 ul {
     display: flex;
     list-style-type: none;
-    width: 300px;
+    width: 400px;
     justify-content: space-between;
+    
+}
+
+ul a {
+   text-decoration: none;
+   font-size: 25px;
+   color: black;
+   align-items: center;
 }
 
 .jumbo {
     height: 300px;
     background-size: cover;
-    background-image: url("https://images.unsplash.com/photo-1451187580459-43490279c0fa?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1172&q=80");
+    background-image: url("https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1813&q=80");
     background-position: center center;
     position: relative;
+    font-size: 50px;
+    font-weight: bolder;
 }
 
 .cool-title {
@@ -52,6 +65,11 @@ main section {
     display: flex;
     margin: 20px 100px;
     justify-content: space-between;
+}
+
+.content{
+    font-size: 25px;
+    font-weight: bold;
 }
 
 main section .title {
@@ -71,23 +89,47 @@ main section .content {
     flex-wrap: wrap;
 }
 
+.project-featured {
+    flex: 2 1 800px;
+    margin: 10px;
+    height: 200px;
+    background-color: lightblue;
+    position: relative;
+    background-image: url(https://previews.123rf.com/images/tashatuvango/tashatuvango1603/tashatuvango160300063/52891858-portfolio-concept-modern-line-style-illustration-multicolor-portfolio-drawn-on-dark-brick-wall-doodl.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+
+.project-name {
+    position: absolute;
+    left: 0px;
+    bottom: 20px;
+    background-color: #ceff00;
+    padding: 20px;
+}
+
+
+
 .project {
     flex: 1 0 300px;
     margin: 10px;
     height: 200px;
     background-color: lightblue;
     position: relative;
+    background-image: url(https://wallup.net/wp-content/uploads/2018/09/30/457781-coming-soon-sign-text-coming-soon.jpg);
+    background-position: center;
+    background-size: cover;
+    
 }
 
-.project.featured {
-    flex: 2 1 800px;
-}
 
-.project-name {
+
+.coming {
     position: absolute;
     left: 0px;
     bottom: 20px;
-    background-color: gold;
+    background-color: #ceff00;
     padding: 20px;
 }
 
@@ -98,7 +140,9 @@ main section .content {
     justify-content: space-evenly;
     align-items: center;
     height: 100%;
+    
 }
+
 
 /* media query */
 @media screen and (max-width: 660px) {
