--- a/style.css
+++ b/style.css
@@ -3,6 +3,10 @@
     padding: 0;
     font-family: 'Muli', sans-serif, !important;
 }
+html{
+    scroll-behavior: smooth;
+    
+}
 
 :root {
     --color-primary: #ceff00;
@@ -33,6 +37,7 @@ ul {
     list-style-type: none;
     width: 400px;
     justify-content: space-between;
+    align-items: center;
     
 }
 
