--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body {
 
 a{
     text-decoration: none;
+    color: var(--color-secondary);
 }
 
 nav {
@@ -52,23 +53,8 @@ ul a {
    align-items: center;
 }
 
-.jumbo {
-    height: 300px;
-    background-size: cover;
-    background-image: url("https://images.unsplash.com/photo-1419242902214-272b3f66ee7a?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1813&q=80");
-    background-position: center center;
-    position: relative;
-    font-size: 50px;
-    font-weight: bolder;
-}
 
-.cool-title {
-    position: absolute;
-    bottom: 30px;
-    right: 80px;
-    background-color: var(--color-primary);
-    padding: 10px;
-}
+
 
 main section {
     display: flex;
@@ -140,6 +126,17 @@ main section .content {
     background-color: lightblue;
     position: relative;
     background-image: url(https://images.ctfassets.net/umhrp0op95v1/3uKxpqws73m0VRKwmOk3WA/2c14d34e4080b0d226d002bc2cccade6/Lost_Ark_Key_Art_1200x630.jpg);
+    background-position: center;
+    background-size: cover;
+}
+
+.project-two{
+    flex: 1 0 300px;
+    margin: 10px;
+    height: 200px;
+    background-color: lightblue;
+    position: relative;
+    background-image: url(https://content.rolex.com/dam/watches/family-pages/cosmograph-daytona/share_a2_v5-cosmograph-daytona.jpg);
     background-position: center;
     background-size: cover;
 }
